<resources>
    <string name="enter_into_account">Вход в личный кабинет</string>
    <string name="search_for_work">Поиск работы</string>
    <string name="next">Продолжить</string>
    <string name="enter_with_password">Войти с паролем</string>
    <string name="search_for_employees">Поиск сотрудников</string>
    <string name="access_vacancies">Размещение вакансий и доступ к базе резюме</string>
    <string name="i_am_searching">Я ищу сотрудников</string>
    <string name="pin_hint">****</string>
    <string name="verify">Подтвердить</string>
    <string name="sent_to">Отправили код на %s</string>
    <string name="input_code_from_email">Напишите его, чтобы подтвердить, что это вы, а не кто-то другой входит в личный кабинет</string>
</resources>