<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0C0C0C"
    android:orientation="vertical"
    tools:context=".presentation.fragment.LoginFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:lineSpacingExtra="4dp"
        android:text="@string/enter_into_account"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="144dp"
        android:background="@drawable/background_darker_gray_rounded_corner_8"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="3.2dp"
            android:text="@string/search_for_work"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/emailInput"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginVertical="16dp"
            android:autofillHints="emailAddress"
            android:background="@drawable/background_lighter_gray_rounded_corner_8"
            android:inputType="textWebEmailAddress"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            tools:text="Почта" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/continueButton"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@drawable/button_selector"
                android:enabled="false"
                android:gravity="center"
                android:lineSpacingExtra="4.2dp"
                android:text="@string/next"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:lineSpacingExtra="4.2dp"
                android:maxLines="1"
                android:text="@string/enter_with_password"
                android:textColor="#2B7EFE"
                android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/background_darker_gray_rounded_corner_8"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="3.2dp"
            android:text="@string/search_for_employees"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:lineSpacingExtra="4.2dp"
            android:text="@string/access_vacancies"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/button_default"
            android:gravity="center"
            android:lineSpacingExtra="4.2dp"
            android:text="@string/i_am_searching"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="14sp" />


    </LinearLayout>

</LinearLayout>