<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0C0C0C"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    tools:context=".presentation.fragment.VerifyFragment">

    <TextView
        android:id="@+id/sentTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp"
        android:lineSpacingExtra="4dp"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:text="Отправили код на example@mail.ru" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:lineSpacingExtra="3.2dp"
        android:text="@string/input_code_from_email"
        android:textColor="@android:color/white"
        android:textSize="14sp" />

    <com.chaos.view.PinView
        android:id="@+id/pinView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:cursorVisible="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:hint="@string/pin_hint"
        android:inputType="number"
        android:itemBackground="#313234"
        android:textColor="#858688"
        android:textColorHint="#858688"
        android:textSize="24sp"
        app:cursorColor="@android:color/white"
        app:hideLineWhenFilled="true"
        app:itemCount="4"
        app:itemHeight="48dp"
        app:itemRadius="8dp"
        app:itemSpacing="4dp"
        app:itemWidth="48dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/verifyButton"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/button_selector"
        android:enabled="false"
        android:gravity="center"
        android:lineSpacingExtra="4.2dp"
        android:text="@string/verify"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="14sp" />

</LinearLayout>